[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["ts0yu"]
repository = "https://github.com/ts0yu/folio"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
compiler = { path = "../compiler" }
